--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
             <td>⭐️⭐️⭐️⭐️</td>
           </tr>
           <tr>
-            <td>SEO</td>
-            <td>⭐️⭐️⭐️⭐️</td>
+            <td>Digital Marketing</td>
+            <td>⭐️⭐️⭐️⭐️⭐️</td>
           </tr>
           <tr>
-            <td>HTML</td>
-            <td>⭐️⭐️⭐️⭐️</td>
+            <td>Web Development</td>
+            <td>⭐️⭐️⭐️⭐️⭐️</td>
           </tr>
         </table>
       </td>
