--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <td>
         <table>
           <tr>
-            <td>SPSS analysis</td>
+            <td>IOS Development</td>
             <td>⭐️⭐️⭐️⭐️</td>
           </tr>
           <tr>
